<resources>
    <string name="app_name">PhoneBook</string>
    <string name="password">Password...</string>
    <string name="login">Login</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="new_record">Create new record</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="family">Family</string>
    <string name="save">Save</string>
</resources>
