<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pouya11.phonebook.CreateRecordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/layout_labels">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/lbl_name"
            android:textSize="@dimen/create_record_label_text_size"
            android:layout_marginBottom="@dimen/create_record_lable_margin_bottom"
            android:layout_marginTop="@dimen/create_record_lable_margin_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family"
            android:id="@+id/lbl_family"
            android:textSize="@dimen/create_record_label_text_size"
            android:layout_marginBottom="@dimen/create_record_lable_margin_bottom"
            android:layout_marginTop="@dimen/create_record_lable_margin_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:id="@+id/lbl_phone"
            android:textSize="@dimen/create_record_label_text_size"
            android:layout_marginBottom="@dimen/create_record_lable_margin_bottom"
            android:layout_marginTop="@dimen/create_record_lable_margin_top"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/lbl_email"
            android:textSize="@dimen/create_record_label_text_size"
            android:layout_marginBottom="@dimen/create_record_lable_margin_bottom"
            android:layout_marginTop="@dimen/create_record_lable_margin_top"  />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/layout_labels"
        android:id="@+id/layout_edit_texts">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/txt_name" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/family"
            android:ems="10"
            android:id="@+id/txt_family" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:ems="10"
            android:id="@+id/txt_phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/txt_email" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_edit_texts"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel"
            android:onClick="btnCancelClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btn_Save"
            android:onClick="btnSaveClicked"/>

    </LinearLayout>
</RelativeLayout>
